infrastructure: add eslint and tailwindcss and make easy to use

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -1,2 +1,6 @@
-<pug src="./index.pug"/>
-<script type="module" src="./index.js"></script>
+extends ../layout.pug
+
+block content
+    div.flex.border.border-gray-300.rounded.p-4.mb-4
+        div.border 前端
+    script(type='module', src='./index.js')
