--- a/src/index.html
+++ b/src/index.html
@@ -1,2 +1,9 @@
-<pug src="./index.pug"/>
-<script type="module" src="./index.js"></script>
+extends layout.pug
+
+block content
+    - var buttonClz = ['text-white', 'bg-indigo-500', 'font-bold', 'border-solid','border-2','border-indigo-600','hover:bg-sky-700','bg-green-500']
+    button(class=buttonClz) Hello World
+    button(class=buttonClz).mr10.animation-shake 采用了 pug tailwindcss 这些库
+    code
+        pre 测试
+    script(type='module', src='./index.js')
