feat(#6): add windicss,not tailwindcss
ISSUES CLOSED: #6

(cherry picked from commit 4b69771ab73ed467ef096598ced08a407725b57a)

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -1,6 +1,11 @@
 extends ../layout.pug
 
 block content
-    div.flex.border.border-gray-300.rounded.p-4.mb-4
-        div.border 前端
+    div: .flex.border.border-gray-300.rounded.p-4.mb-4(
+        class="hover:border-red-300"
+    )
+        div.tt.border(
+            border="49px"
+        ) 前端
     script(type='module', src='./index.js')
+
